# svgicons

./: .gitignore  README.md  pyproject.toml
src/: main.py  requirements.txt  svg2png.py
templates/: grid.template  html.template  svg.template
www/: script.js
